--- a/.github/workflows/ci1.yaml
+++ b/.github/workflows/ci1.yaml
@@ -14,7 +14,10 @@ jobs:
         id: ecr-login
         uses: aws-actions/amazon-ecr-login@v2
         with:
-          region: ${{secrets.AWS_REGION}} 
+          region: ${{secrets.AWS_REGION}}
+          mask-password: true
+          registry-type: private
+          skip-logout: false
       - name: Build Docker image
         run: |
           docker build -t ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.${{secrets.AWS_REGION}}.amazonaws.com/cat:${{github.sha}} .
