--- a/.github/workflows/ci1.yaml
+++ b/.github/workflows/ci1.yaml
@@ -1,56 +1,33 @@
-name: Build and Push Docker Image to ECR
+name: cat Application CI
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - 'cats/**'
+    branches: ['main']
+    paths: ['cats/**']
 
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up AWS CLI
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        aws-region: ${{ secrets.AWS_REGION }}
+      - name: Log in to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Log in to Amazon ECR
-      id: ecr-login
-      uses: aws-actions/amazon-ecr-login@v1
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:${{ github.run_id }} cats/Dockerfile cats/
 
-    # - name: Build Docker image
-    #   run: |
-    #     docker build -t my-ecr-image:latest ./cats
+      - name: Push Docker image to ECR
+        run: |
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:${{ github.run_id }}
 
-    # - name: Tag Docker image
-    #   run: |
-    #     docker tag my-ecr-image:latest your-account-id.dkr.ecr.your-aws-region.amazonaws.com/your-repository-name:latest
+      - name: Tag Docker image as 'latest'
+        run: |
+          docker tag ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:${{ github.run_id }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:latest
 
-    # - name: Push Docker image to ECR
-    #   run: |
-    #     docker push your-account-id.dkr.ecr.your-aws-region.amazonaws.com/your-repository-name:latest
-        
-    - name: Build Docker image
-      run: |
-        docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:${{ github.sha }} ./cats/
-
-    - name: Push Docker image to ECR
-      run: |
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:${{ github.sha }}
-
-    - name: Tag Docker image as 'latest'
-      run: |
-        docker tag ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:${{ github.sha }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:latest
-
-    - name: Push 'latest' tag to ECR
-      run: |
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:latest
+      - name: Push 'latest' tag to ECR
+        run: |
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cat:latest
